<resources>
    <string name="app_name">eHireMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ehireme">eHireMe</string>

    <string name="admin">Admin</string>
    <string name="listofjobs">List of Jobs</string>
    <string name="PREFERENCES_NAME">8675309</string>
    <string name="_id">_id</string>
    <string name="upload">Choose photo</string>
    <string name="picDesc">The user\'s profile photo</string>
    <string name="applicant">Applicant</string>
    <string name="employer">Employer</string>

    <string name="company_name">Company Name</string>
    <string name="title">Title</string>
    <string name="searchField">Field</string>
    <string name="titleExp">Title Experience</string>
    <string name="fieldExp">Field Experience</string>

    <string name="company">Company:</string>
    <string name="description">Description:</string>
    <string name="starting_rate">Starting Rate:</string>
    <string name="field">Field:</string>
    <string name="title_experience">Title Experience:</string>
    <string name="field_experience">Field Experience:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>

    <string name="insert_type_here">Insert Type here</string>
    <string name="apply">Apply</string>
    <string name="refresh">Refresh</string>
    <string name="applied">Applied!</string>
    <string name="matchesText">My Matches</string>
    <string name="newJob">Create A Job</string>
    <string name="addJob">Add Job</string>
    <string name="myJobs">My Jobs</string>
    <string name="applicantstojob">Applicants to Job</string>
    <string name="done">You made it through them all!</string>
    <string name="toList">Switch to Listview</string>
    <string name="toTinder">Switch to TinderView</string>
    <string name="title_activity_network_request_tests">NetworkRequestTests</string>
    <string name="title_activity_login">Sign in</string>
    <string name="unapply">Unapply</string>

    <!-- Strings related to login -->
    <string name="enterinfo">Enter Your Information Below</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="matchpass">Passwords do not match</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">You must have a password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>
    <string name="insert_name_here">Insert Name Here</string>
    <string name="insert_email">Insert Email Here</string>
</resources>
