<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">
    <!--android:id="@+id/registerlayout"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/registerlayout">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterinfo"
            android:id="@+id/enterInfo"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applicant"
                android:id="@+id/applicantBtn"
                android:layout_gravity="right"
                android:onClick="onRadioButtonClicked"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employer"
                android:id="@+id/employerBtn"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <!--Start of applicantview-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/applicantview"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/applicant_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/applicant_name"
                    android:imeOptions="actionNext"
                    android:hint="Name" />

                <EditText
                    android:id="@+id/applicant_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!--android:imeActionId="@+id/regpass" for below -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/applicant_photo"
                        android:src="@mipmap/ic_profile"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload"
                        android:id="@+id/applicant_upload_img_btn"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/applicant_dob"
                    android:hint="DOB (MM/DD/YYYY)" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/applicant_age"
                    android:hint="Age" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:id="@+id/applicant_city"
                    android:hint="City" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:id="@+id/applicant_state"
                    android:hint="State" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/applicant_bio"
                    android:hint="Short Bio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/searchField"
                    android:id="@+id/textView18"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/applicant_field"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title"
                    android:id="@+id/textView19"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/applicant_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/titleExp"
                    android:id="@+id/textView20"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/applicant_title_experience"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fieldExp"
                    android:id="@+id/textView21"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/applicant_field_experience"/>

                <EditText
                    android:id="@+id/applicant_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/applicant_confirm_pass"
                    android:hint="@string/confirmpass" />

            </LinearLayout>

        </ScrollView>



        <!--Start of employerview-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employerview"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/employer_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/company_name"
                    android:imeOptions="actionNext"
                    android:hint="Company Name" />

                <EditText
                    android:id="@+id/business_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Business Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!--android:imeActionId="@+id/regpass" for below -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/company_photo"
                        android:contentDescription="Profile photo (To upload)"
                        android:src="@mipmap/ic_profile"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload"
                        android:id="@+id/upload_company_img_btn"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/company_description"
                    android:hint="Description" />

                <EditText
                    android:id="@+id/company_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/company_confirm_pass"
                    android:hint="@string/confirmpass" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>
